--- a/ludka.html
+++ b/ludka.html
@@ -12,112 +12,141 @@
       --card:#111722; --card2:#0f1520;
       --stroke:rgba(255,255,255,.06);
       --stroke2:rgba(100,160,255,.25);
+      --blue:#3b82f6; --blue2:#1d4ed8;
       --text:#e6edf3; --muted:#98a2b3;
       --shadow:0 0 0 1px var(--stroke),0 8px 30px rgba(0,0,0,.6);
+      --radius:18px;
+    }
+    html[data-theme="light"]{
+      --bg:#f4f7fb; --bg2:#eef2f7; --panel:#ffffff;
+      --card:#ffffff; --card2:#f6f8fb;
+      --stroke:rgba(10,20,40,.08);
+      --stroke2:rgba(59,130,246,.35);
+      --blue:#2563eb; --blue2:#1d4ed8;
+      --text:#0b1220; --muted:#52607a;
+      --shadow:0 0 0 1px var(--stroke),0 10px 26px rgba(10,20,40,.08);
     }
     *{box-sizing:border-box;}
     body{
       margin:0;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
       color:var(--text);
-      background:linear-gradient(180deg,var(--bg2),var(--bg));
+      background:
+        radial-gradient(1000px 600px at 10% -10%, rgba(59,130,246,.28), transparent 60%),
+        radial-gradient(800px 500px at 110% 0%, rgba(29,78,216,.22), transparent 55%),
+        linear-gradient(180deg, var(--bg2) 0%, var(--bg) 100%);
       min-height:100vh; padding:14px; display:flex; justify-content:center;
-      position:relative;
-      overflow:hidden;
     }
     .app{
       width:min(900px,100%);
       border-radius:20px;
       padding:14px;
       border:1px solid var(--stroke);
-      background:var(--bg2);
+      background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0));
       box-shadow:var(--shadow);
-      position:relative;
-      overflow:hidden;
-    }
-    .app::before{
-      content:"";
-      position:absolute;
-      top:-120px;left:50%;transform:translateX(-50%);
-      width:780px;height:260px;
-      background:radial-gradient(320px 180px at 50% 100%, rgba(59,130,246,.35), transparent 65%);
-      filter:blur(18px);
-      opacity:.8;
-      pointer-events:none;
     }
     header{
       display:flex;align-items:center;justify-content:space-between;
-      padding:4px 0 14px 0;
+      padding:4px 0 14px 0; gap:10px;
     }
     .back{
       color:var(--text);text-decoration:none;font-weight:700;
-      padding:8px 12px;border-radius:10px;
       background:linear-gradient(180deg,var(--card),var(--card2));
-      border:1px solid var(--stroke);
+      padding:8px 12px;border-radius:10px;border:1px solid var(--stroke);
+      display:inline-flex;align-items:center;gap:6px;
+      transition:.15s; cursor:pointer;
     }
+    .back:hover{border-color:var(--stroke2);transform:translateY(-1px);}
     .title{
-      text-align:center;flex:1;
+      font-weight:800;font-size:20px; flex:1; text-align:center;
     }
-    h1{margin:0;font-size:22px;font-weight:900;}
     .grid{
       display:grid;
       grid-template-columns:1fr;
-      gap:14px;
-      width:100%;
+      gap:12px;
     }
-    .card{
-  width:100%;
-  min-width:0;               /* важно для grid, чтобы не распирало */
-  border-radius:16px;
-  padding:16px;
-  background:linear-gradient(180deg,var(--card),var(--card2));
-  border:1px solid var(--stroke);
-  box-shadow:var(--shadow);
-  cursor:pointer;
-  transition:.15s ease;
-  color:var(--text);
-  text-decoration:none;
-  display:block;
-}
-    .card:hover{border-color:var(--stroke2);transform:translateY(-2px);}
-    .title2{font-size:18px;font-weight:900;margin-bottom:4px;}
-    .subtitle{font-size:12px;color:var(--muted);}
+    .cardbtn{
+      background:linear-gradient(180deg,var(--card),var(--card2));
+      border:1px solid var(--stroke);
+      border-radius:16px; padding:16px;
+      display:flex; align-items:center; justify-content:space-between;
+      text-decoration:none; color:var(--text);
+      transition:.15s;
+      min-height:74px;
+    }
+    .cardbtn:hover{border-color:var(--stroke2);transform:translateY(-2px);}
+    .cardbtn h3{margin:0;font-size:18px;}
+    .cardbtn p{margin:4px 0 0;font-size:13px;color:var(--muted);}
+    .badge{font-size:12px;color:var(--muted);font-weight:700;}
   </style>
 </head>
 <body>
   <div class="app">
     <header>
       <a class="back" href="/">← Назад</a>
-      <div class="title">
-        <h1>Лудка</h1>
-      </div>
-      <div style="width:48px"></div>
+      <div class="title">Лудка</div>
+      <div style="width:88px"></div>
     </header>
 
-    <div class="grid">
-
-      <a class="card" href="/dice">
-        <div class="title2">🎲 Кости</div>
-        <div class="subtitle">Бросок до 5 кубиков</div>
+    <section class="grid">
+      <a class="cardbtn" href="/dice">
+        <div>
+          <h3>🎲 Кости</h3>
+          <p>Бросок до 5 кубиков</p>
+        </div>
+        <div class="badge">→</div>
       </a>
 
-      <a class="card" href="/bj">
-        <div class="title2">🃏 Блэкджек</div>
-        <div class="subtitle">Победа = +1 очко</div>
+      <a class="cardbtn" href="/bj">
+        <div>
+          <h3>🃏 Блэкджек</h3>
+          <p>Победа = +1 очко</p>
+        </div>
+        <div class="badge">→</div>
       </a>
 
-      <a class="card" href="/slot">
-        <div class="title2">🎰 Слот‑машина</div>
-        <div class="subtitle">3 в ряд = +1 очко</div>
+      <a class="cardbtn" href="/slot">
+        <div>
+          <h3>🎰 Слот‑машина</h3>
+          <p>3 в ряд = +1 очко</p>
+        </div>
+        <div class="badge">→</div>
       </a>
 
-      <a class="card" href="/rating">
-        <div class="title2">🏆 Рейтинг</div>
-        <div class="subtitle">Таблица лидеров</div>
+      <a class="cardbtn" href="/rating">
+        <div>
+          <h3>🏆 Рейтинг</h3>
+          <p>Таблица лидеров</p>
+        </div>
+        <div class="badge">→</div>
       </a>
-
-    </div>
-
+    </section>
   </div>
+
+  <script>
+    function hexToRgb(hex){
+      if(!hex || hex[0] !== "#") return null;
+      const r=parseInt(hex.slice(1,3),16), g=parseInt(hex.slice(3,5),16), b=parseInt(hex.slice(5,7),16);
+      return {r,g,b};
+    }
+    function isBgDark(hex){
+      const c=hexToRgb(hex); if(!c) return true;
+      const lum=(0.299*c.r+0.587*c.g+0.114*c.b)/255;
+      return lum < 0.55;
+    }
+    (function initTelegram(){
+      const tg = window.Telegram && window.Telegram.WebApp;
+      if(!tg) return;
+      tg.ready(); tg.expand();
+      const p=tg.themeParams||{};
+      if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
+      if(p.secondary_bg_color) document.documentElement.style.setProperty("--panel", p.secondary_bg_color);
+      if(p.text_color) document.documentElement.style.setProperty("--text", p.text_color);
+      if(p.hint_color) document.documentElement.style.setProperty("--muted", p.hint_color);
+      if(p.bg_color && !isBgDark(p.bg_color)) document.documentElement.setAttribute("data-theme","light");
+      else document.documentElement.setAttribute("data-theme","dark");
+      tg.onEvent("themeChanged", () => location.reload());
+    })();
+  </script>
 </body>
 </html>
