--- a/rpg.html
+++ b/rpg.html
@@ -98,7 +98,7 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
     <a class="back" href="/">← Назад</a>
     <div class="title">
       <h1>RPG</h1>
-      <span>Добыча + крафт + инвентарь</span>
+      <span>И тут фарм достал.</span>
     </div>
     <div class="balance-pill"><span>🪙</span><span id="balanceValue">0</span></div>
   </header>
