--- a/rpg.html
+++ b/rpg.html
@@ -98,7 +98,7 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
     <a class="back" href="/">← Назад</a>
     <div class="title">
       <h1>RPG</h1>
-      <span>И тут фарм достал.</span>
+      <span>Добыча + крафт + инвентарь</span>
     </div>
     <div class="balance-pill"><span>🪙</span><span id="balanceValue">0</span></div>
   </header>
@@ -127,9 +127,10 @@ header{display:flex;align-items:center;justify-content:space-between;padding:10p
       <div class="tab active" data-shop="tools">Инструменты</div>
       <div class="tab" data-shop="acc">Аксессуары</div>
       <div class="tab" data-shop="bags">Сумки</div>
+      <div class="tab" data-shop="tickets">Билеты</div>
     </div>
     <div class="list" id="shopList" style="margin-top:10px;"></div>
-    <div class="note">Покупка сразу применяет бафф, предмет пропадает из магазина.</div>
+    <div class="note">Покупка сразу применяет бафф, предмет пропадает из магазина. Билеты сохраняются в личном кабинете.</div>
   </section>
 
   <section class="section hidden" id="benchView">
@@ -200,9 +201,21 @@ const TOOLS = [
 ];
 
 const BAGS = [
-  {id:"bag1", name:"Мешок из ткани", cost:3, capAdd:50, req:{wood:8}},
-  {id:"bag2", name:"Сумка старателя", cost:6, capAdd:100, req:{stone:12}},
-  {id:"bag3", name:"Рюкзак шахтёра", cost:12, capAdd:200, req:{iron:10,silver:4}},
+  {id:"bag1",  name:"Мешок из ткани",         cost:3,  capAdd:50,  req:{wood:8}},
+  {id:"bag2",  name:"Сумка старателя",        cost:6,  capAdd:100, req:{stone:12}},
+  {id:"bag3",  name:"Рюкзак шахтёра",         cost:12, capAdd:200, req:{iron:10,silver:4}},
+  {id:"bag4",  name:"Укреплённый рюкзак",     cost:18, capAdd:300, req:{iron:15, silver:5}},
+  {id:"bag5",  name:"Экспедиционный мешок",  cost:25, capAdd:450, req:{silver:8, gold:3}},
+  {id:"bag6",  name:"Каркасная сумка",       cost:33, capAdd:650, req:{gold:5, crystal:1}},
+  {id:"bag7",  name:"Горный баул",           cost:42, capAdd:900, req:{iron:25, silver:10, gold:6}},
+  {id:"bag8",  name:"Сумка инженера",        cost:55, capAdd:1200,req:{silver:18, gold:10, crystal:2}},
+  {id:"bag9",  name:"Артефактный рюкзак",    cost:70, capAdd:1600,req:{gold:18, crystal:4}},
+  {id:"bag10", name:"Легендарный контейнер", cost:95, capAdd:2200,req:{silver:25, gold:20, crystal:8}},
+];
+
+const TICKETS = [
+  {id:"raffle_ticket", name:"🎟 Билет розыгрыша", cost:500,
+   desc:"Шанс на выигрыш в розыгрыше, думаю именно тебе повезет забрать главный приз!"}
 ];
 
 let uid = null;
@@ -222,7 +235,6 @@ function initTelegram(){
   if(!tg) return null;
 
   tg.ready();
-  // ВАЖНО: expand только один раз — иначе тряска
   if(!window._tgExpanded){
     try{ tg.expand(); }catch(e){}
     window._tgExpanded = true;
@@ -240,7 +252,6 @@ function initTelegram(){
         || (tg.initDataUnsafe && tg.initDataUnsafe.user && tg.initDataUnsafe.user.id)
         || null;
 
-  // Никаких reload — только легкое обновление CSS
   tg.onEvent("themeChanged", () => {
     const p=tg.themeParams||{};
     if(p.bg_color) document.documentElement.style.setProperty("--bg", p.bg_color);
@@ -293,7 +304,7 @@ function renderResources(){
   const caps = state.caps || {};
   RES_META.forEach(meta=>{
     const cur = state.resources?.[meta.id] ?? 0;
-    const max = Math.min(RES_MAX + (caps[meta.id]||0), 2000);
+    const max = Math.min(RES_MAX + (caps[meta.id]||0), 5000);
     const pct = max>0 ? Math.min(100, (cur/max)*100) : 0;
     const el=document.createElement("div");
     el.className="res-card";
@@ -355,6 +366,32 @@ function renderItemsInto(container, items, ownedSet, kind){
   });
 }
 
+function renderTickets(container){
+  container.innerHTML="";
+  TICKETS.forEach(t=>{
+    const el=document.createElement("div");
+    el.className="item";
+    const canBuy = (state.balance||0) >= t.cost;
+    el.innerHTML = `
+      <h4>${t.name}</h4>
+      <div class="desc">${t.desc}</div>
+      <div class="cost">Цена: 🪙 ${t.cost}</div>
+      <div class="req">После покупки билет появится в Личном кабинете.</div>
+      <button class="buybtn" ${canBuy?"":"disabled"}>Купить</button>
+    `;
+    el.querySelector("button").addEventListener("click", async ()=>{
+      if(!canBuy) return;
+      const res = await apiPost("/api/raffle/buy_ticket", {user_id:uid});
+      if(!res.ok){ alert(res.error||"Ошибка покупки билета"); return; }
+      state.balance = res.balance ?? state.balance;
+      localStorage.setItem("rpg_state_"+uid, JSON.stringify(state));
+      alert("Твой билет: #"+res.ticket);
+      renderAll();
+    });
+    container.appendChild(el);
+  });
+}
+
 function renderShop(listKind){
   const ownedTools = new Set(state.owned?.tools||[]);
   const ownedAcc = new Set(state.owned?.acc||[]);
@@ -363,7 +400,8 @@ function renderShop(listKind){
   const list=document.getElementById("shopList");
   if(listKind==="tools") renderItemsInto(list, TOOLS, ownedTools, "tools");
   else if(listKind==="acc") renderItemsInto(list, ACCESSORIES, ownedAcc, "acc");
-  else renderItemsInto(list, BAGS, ownedBags, "bags");
+  else if(listKind==="bags") renderItemsInto(list, BAGS, ownedBags, "bags");
+  else renderTickets(list);
 }
 
 function renderBench(){
@@ -418,15 +456,12 @@ function fillConvertSelects(){
 }
 
 async function loadState(){
-  // Серверный state (если он есть), иначе локальный
   const res = await apiGet(`/api/rpg/state?user_id=${uid}`);
   if(res && res.ok){
     state = res.state;
     localStorage.setItem("rpg_state_"+uid, JSON.stringify(state));
   } else {
-    try{
-      state = JSON.parse(localStorage.getItem("rpg_state_"+uid) || "null");
-    }catch(e){ state=null; }
+    try{ state = JSON.parse(localStorage.getItem("rpg_state_"+uid) || "null"); }catch(e){ state=null; }
     if(!state){
       state = {
         balance: 0,
@@ -448,43 +483,19 @@ async function gather(){
     state = res.state;
     localStorage.setItem("rpg_state_"+uid, JSON.stringify(state));
     const gain=res.gained||{};
-
     const lines=Object.entries(gain).filter(([k,v])=>v>0).map(([k,v])=>{
       const name=RES_META.find(x=>x.id===k)?.name||k;
       return `${name}: +${v}`;
     });
     if(lines.length) alert("Добыто:\n"+lines.join("\n"));
-
   } else {
-    // Локальный режим (если бэк сейчас без RPG эндпоинтов)
     if((state.cooldown_remaining||0) > 0) return;
-
     state.cooldown_remaining = 300;
-    const yAdd = state.buffs?.yield_add || 0;
-
-    const gain = {
-      wood:  5 + Math.floor(Math.random()*6),
-      stone: 3 + Math.floor(Math.random()*5),
-      iron:  Math.random()<0.35 ? 1 : 0,
-      silver:Math.random()<0.15 ? 1 : 0,
-      gold:  Math.random()<0.07 ? 1 : 0,
-      crystal:Math.random()<0.03 ? 1 : 0
-    };
-
-    for(const k in gain){
-      gain[k] = Math.floor(gain[k] * (1+yAdd));
-      state.resources[k] = (state.resources[k]||0) + gain[k];
+    for(const k in state.resources){
+      state.resources[k] = state.resources[k] || 0;
     }
-
     localStorage.setItem("rpg_state_"+uid, JSON.stringify(state));
-
-    const lines = Object.entries(gain).filter(([,v])=>v>0).map(([k,v])=>{
-      const name=RES_META.find(x=>x.id===k)?.name||k;
-      return `${name}: +${v}`;
-    });
-    if(lines.length) alert("Добыто:\n"+lines.join("\n"));
   }
-
   renderAll();
 }
 
@@ -536,13 +547,12 @@ function setupConvert(){
 }
 
 (function main(){
-  const tg = initTelegram();
+  initTelegram();
   setupTabs();
   setupConvert();
   document.getElementById("gatherBtn").addEventListener("click", gather);
   loadState();
 
-  // локальный тикающий КД (если бэка нет)
   setInterval(()=>{
     if(state){
       state.cooldown_remaining=Math.max(0,(state.cooldown_remaining||0)-1);
